--- a/index.html
+++ b/index.html
@@ -45,14 +45,39 @@
 				<div class="inner">
 					<header>
 						<h1>Math Play</h1>
-						<p>Improve your math skills for school, work or life in general.</p>
+						<h3>Improve your math skills for school, work or life in general.</h3>
 					</header>
+					<div class="content align-left">
+						<section>
+							<p>
+								Math Play is a fun app that helps you improve your skills in math. It presents
+								you
+								with
+								mathematical questions based on
+								the operation of your choice.
+
+								The more questions you answer correctly, the more challenging the questions
+								become.
+								And
+								when
+								you've answered enough
+								questions, you have to provide your answers before the timer runs out!
+
+								This app can be a great help whether you want to improve your math skills for
+								school,
+								work
+								or life in general.
+
+								For any questions or comments, email us at: <a
+									href="mailto://games@w3applications.com">games@w3applications.com</a>.
+							</p>
+						</section>
+					</div>
+
 					<ul class="actions">
 						<li><a href="https://apps.apple.com/us/app/math-play-improve-your-skills/id1496384855?ls=1"
 								style="border-bottom:none;display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;"></a>
 						</li>
-					</ul>
-					<ul class="actions">
 						<li><a style="border-bottom: none;"
 								href='https://play.google.com/store/apps/details?id=com.w3applications.mathPlay&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
 									style="margin-left: -10px;" alt='Get it on Google Play' width="155px;"
