Fixed issue where App Store logo was not displayed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
 					<ul class="actions">
 						<li><a href="https://apps.apple.com/us/app/math-play-improve-your-skills/id1496384855?ls=1"
-								style="border-bottom:none;display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;"></a>
+								style="border-bottom: none;">
+								<img src="images/app-store-download.png" style="width:135px;height:40px;" />
+							</a>
 						</li>
 						<li><a style="border-bottom: none;"
 								href='https://play.google.com/store/apps/details?id=com.w3applications.mathPlay&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'><img
